test/functional/failtests/tupleInUntypedDeclaration.txt
TypeError: Cannot subscript built-in types with non-static ints
1 | var x = 1;
2 | var foo = [: 123, 456][x];
  |           ^ (2:11)
3 | 

